 # [#31554] Module manager allows positions with trailing spaces. Thanks Richard McDaniel
 # [#31632] Small data type fix in phpdoc. Thanks Gunjan Patel
 # [#31384] Hathor - Modal broken. Thanks cata castillo
 # [#30806] Incorrect database type in the Statistics site module. Thanks Brian Teeman
 # [#31439] email cloaking inserts space. Thanks Peter Martin

02-Aug-2013 Jean-Marie Simonet
 $ Updating installation lang files: ru-RU, sv-SE

-------------------- 3.1.5 Stable Release [01-Aug-2013] ------------------

31-Jul-2013 Michael Babker
 # [#31620] Some plugins cause blank pages in 3.1.4.  Thanks Don Gilbert
 # [#31607] REGRESSION: Changing the autoload order in a point release.  Thanks Don Gilbert
 # [#31598] Fix for B/C break related to Tag saving using *old* way.  Thanks Thomas Hunziker

30-Jul-2013 Jean-Marie Simonet
 # [#31609] *Regression: [#30150] prevents subcategories drilldowns

28-Jul-2013 Jean-Marie Simonet
 # [#31585] Can't add tags to articles in 3.1.4. Thanks Roberto Segura

27-Jul-2013 Michael Babker
 # [#31565] CamelCased view classes are broken in J!3.1.4.  Thanks Jean-Marie Simonet

27-Jul-2013 Jean-Marie Simonet
 # [#31590] *New registration password field is displayed as Optional

-------------------- 3.1.4 Stable Release [26-Jul-2013] ------------------

25-Jul-2013 Michael Babker
 # [#31550] SQL error if profiling not available/not activated in mysql (3.1.2 pre release).  Thanks Beat

24-Jul-2013 Jean-Marie Simonet
 # [#31548] Toolbar: Different version of CSS vs LESS files + mobile resolution fixes. Thanks Roberto Segura

23-Jul-2013 Michael Babker
 # [#31500] Hathor: No Batch at some Managers.  Thanks Angelika Reisiger
 # [#31547] IDN library missing from update sql files 3.1.2+master.  Thanks Elin Waring
 # Incorrect quoting in PostgreSQL 3.1.2 updates.

-------------------- 3.1.2 Stable Release [23-Jul-2013] ------------------

21-Jul-2013 Mark Dexter
 ^ [#31319] registration option disabled by default is safer. Thanks Brian Teeman.